<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_5"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/smoke"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:text="@string/mission_name"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/MissionName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black" />

            </LinearLayout>

            <ImageView
                android:id="@+id/mainImage"
                style="@drawable/touch_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/misshon_image"
                android:longClickable="true"
                android:src="@drawable/y2hhcmeucg5n_5085" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/datetime"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/MissionDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            </LinearLayout>
        </LinearLayout>

        <View
            style="@style/underLine"
            android:layout_width="wrap_content"
            android:layout_height="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightgray"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right" >

                <TextView
                    android:id="@+id/GuildCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/MemberCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/Total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_5"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:text="@string/devidend_paid"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/Payed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <View style="@style/underLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dimgray"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/AuctionGuildName"
                android:textColor="@color/text_light" />

        </LinearLayout>

        <View style="@style/underLine" />

        <ScrollView
            android:id="@+id/guildSpace"
            android:layout_width="match_parent"
            android:layout_height="0dp" >

            <LinearLayout
                android:id="@+id/guild"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>

        <View style="@style/underLine" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dimgray"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/AuctionItemName"
                android:textColor="@color/text_light" />
        </LinearLayout>

        <View style="@style/underLine" />

        <ScrollView
            android:id="@+id/itemSpace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/item"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical" >

            <View style="@style/underLine" />

            <Button
                android:id="@+id/itemButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onTouch"
                android:text="@string/itemAddButton" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
